modify pom and improve dashboard style
1. add maven compile classfier specification
2. fix dashboard `wrapper` horizontal scrollbar
3. make `wrapper` stay height of window, and white background
3. minus `.page-header` class margin top

--- a/kafka-eagle-web/src/main/webapp/media/css/public/sb-admin.css
+++ b/kafka-eagle-web/src/main/webapp/media/css/public/sb-admin.css
@@ -9,6 +9,11 @@
 body {
     margin-top: 100px;
     background-color: #222;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 @media(min-width:768px) {
@@ -19,12 +24,13 @@ body {
 
 #wrapper {
     padding-left: 0;
+    min-height: 100%;
+    background: #fff;
 }
 
 #page-wrapper {
     width: 100%;
     padding: 0;
-    background-color: #fff;
 }
 
 .huge {
@@ -38,7 +44,7 @@ body {
     }
 
     #page-wrapper {
-        padding: 10px;
+        padding: 15px;
     }
 }
 
@@ -224,4 +230,9 @@ ul.alert-dropdown {
 
 .panel-yellow > a:hover {
     color: #df8a13;
+}
+
+/* Wrapper Content */
+h1.page-header {
+    margin: 5px 0 20px;
 }
