fixed dashboard panel

--- a/efak-web/src/main/webapp/media/css/public/pro/style.css
+++ b/efak-web/src/main/webapp/media/css/public/pro/style.css
@@ -316,6 +316,13 @@ a {
     font-size: 13px;
 }
 
+.font-weight-bold {
+    font-weight: 700 !important;
+}
+
+.text-uppercase {
+    text-transform: uppercase !important;
+}
 
 .header-message-list {
     position: relative;
