add topic table list

--- a/efak-web/src/main/webapp/media/css/public/pro/style.css
+++ b/efak-web/src/main/webapp/media/css/public/pro/style.css
@@ -1085,7 +1085,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    cursor: pointer;
+    /*cursor: pointer;*/
 }
 
 .widget-icon-large {
