--- a/efak-web/src/main/resources/templates/public/common.html
+++ b/efak-web/src/main/resources/templates/public/common.html
@@ -11,7 +11,25 @@
 
 <!-- script -->
 <th:block th:fragment="js">
+    <!-- core:js -->
+    <script src="../../assets/vendors/core/core.js"></script>
 
+    <!-- Plugin js for this page -->
+    <script src="../../assets/vendors/chartjs/Chart.min.js"></script>
+    <script src="../../assets/vendors/jquery.flot/jquery.flot.js"></script>
+    <script src="../../assets/vendors/jquery.flot/jquery.flot.resize.js"></script>
+    <script src="../../assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
+    <script src="../../assets/vendors/apexcharts/apexcharts.min.js"></script>
+    <!-- End plugin js for this page -->
+
+    <!-- inject:js -->
+    <script src="../../assets/vendors/feather-icons/feather.min.js"></script>
+    <script src="../../assets/js/template.js"></script>
+    <!-- endinject -->
+
+    <!-- Custom js for this page -->
+    <script src="../assets/js/dashboard-dark.js"></script>
+    <script src="../assets/js/datepicker.js"></script>
 </th:block>
 <!-- css -->
 <th:block th:fragment="css">
