add: create db with startup

--- a/efak-web/src/main/resources/templates/public/header.html
+++ b/efak-web/src/main/resources/templates/public/header.html
@@ -194,13 +194,13 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button"
                            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img class="wd-30 ht-30 rounded-circle" src="../../assets/images/favicon.ico"
+                            <img class="wd-30 ht-30 rounded-circle" src="../../assets/images/profile.png"
                                  alt="profile">
                         </a>
                         <div class="dropdown-menu p-0" aria-labelledby="profileDropdown">
                             <div class="d-flex flex-column align-items-center border-bottom px-5 py-3">
                                 <div class="mb-3">
-                                    <img class="wd-80 ht-80 rounded-circle" src="../../assets/images/favicon.ico"
+                                    <img class="wd-80 ht-80 rounded-circle" src="../../assets/images/profile.png"
                                          alt="">
                                 </div>
                                 <div class="text-center">
@@ -210,7 +210,7 @@
                             </div>
                             <ul class="list-unstyled p-1">
                                 <li class="dropdown-item py-2">
-                                    <a href="pages/general/profile.html" class="text-body ms-0">
+                                    <a href="#" class="text-body ms-0">
                                         <i class="me-2 icon-md" data-feather="user"></i>
                                         <span th:text="#{kafka.eagle.header.profile}">Profile</span>
                                     </a>
