add: dev cluster manage view

--- a/efak-web/src/main/resources/templates/public/header.html
+++ b/efak-web/src/main/resources/templates/public/header.html
@@ -82,7 +82,7 @@
                                     <div class="d-flex justify-content-between flex-grow-1">
                                         <div class="me-4">
                                             <p th:text="#{kafka.eagle.faq.github}">Github</p>
-                                            <p class="tx-12 text-muted" th:text="kafka.eagle.faq.github.doc">Github Doc</p>
+                                            <p class="tx-12 text-muted" th:text="#{kafka.eagle.faq.github.doc}">Github Doc</p>
                                         </div>
                                     </div>
                                 </a>
