--- a/efak-web/src/main/resources/templates/welcome.html
+++ b/efak-web/src/main/resources/templates/welcome.html
@@ -323,7 +323,7 @@
                         </div>
                         <div class="col-md-6 align-self-center">
                             <h1 class="efak_welcome_title_h1" th:text="#{kafka.eagle.welcome.title}"></h1>
-                            <button id="" class="btn btn-primary btn-icon-text btn-lg" th:utext="#{kafka.eagle.welcome.title.button}"></button>
+                            <button id="efak_welcome_btn" class="btn btn-primary btn-icon-text btn-lg" th:utext="#{kafka.eagle.welcome.title.button}"></button>
                         </div>
                     </div>
                 </div>
