--- a/efak-web/src/main/resources/templates/dataspace/dashboard.html
+++ b/efak-web/src/main/resources/templates/dataspace/dashboard.html
@@ -440,6 +440,8 @@
 
 <!-- core:js -->
 <th:block th:replace="public/common :: js"></th:block>
-
+<!-- Custom js for this page -->
+<script src="../assets/js/dashboard-dark.js"></script>
+<script src="../assets/js/datepicker.js"></script>
 </body>
 </html>    
