--- a/efak-web/src/main/resources/templates/public/header.html
+++ b/efak-web/src/main/resources/templates/public/header.html
@@ -6,7 +6,7 @@
     <nav class="navbar top-navbar">
         <div class="container">
             <div class="navbar-content">
-                <a href="#" class="navbar-brand">
+                <a href="/" class="navbar-brand">
                     Kafka<span>Eagle</span>
                 </a>
                 <form class="search-form">
